syntax = "proto2";

package stremio.core.models;

option java_package = "com.stremio.core.models";

import "stremio/core/models/library_with_filters.proto";
import "stremio/core/types/library.proto";

message LibraryByType {
  optional Selected selected = 1;
  required Selectable selectable = 2;
  repeated LibraryCatalog catalogs = 3;

  message Selected {
    required LibraryWithFilters.Sort sort = 1;
  }
  message Selectable {
    repeated SelectableSort sorts = 1;
  }
  message SelectableSort {
    required LibraryWithFilters.Sort sort = 1;
    required bool selected = 2;
  }
}

message LibraryCatalog {
  optional string type = 1;
  repeated stremio.core.types.LibraryItem items = 2;
}